syntax = "proto3";

package bank;

import "bank/type/account.proto";
import "bank/type/exchange.proto";
import "bank/type/transaction.proto";

option go_package = "protogen/go/bank";

service BankService {
  rpc GetCurrentBalance (CurrentBalanceRequest) returns 
  (CurrentBalanceResponse) {};
  
  rpc FetchExchangeRates (ExchangeRateRequest) returns 
  (stream ExchangeRateResponse) {};

  rpc SummarizeTransactions(stream Transaction) returns 
  (TransactionSummary) {};
}
